CHANGELOG
---------

- 2015/03/31 0.4.0 release.
    - Issue 21: Cleaned up Lattice-related API call.
    - Issue 23: Implemented support for theta option on Lattice.
    - Issue 25: Enhanced tokenization to remove whitespace for partial parse.
    - Issue 26: Updated to docs/index.rst for new MeCab home at github. 

- 2015/03/19 0.3.0 release.
    - Added morpheme boundary constraint parsing.
    - Minor corrections to docs/index.rst formatting. 

- 2015/03/19 0.3.0 release.
    - Pulled.

- 2015/02/22 0.2.1 release.
    - Enhancement for Issue 11: Debugging should use a kwarg. 
    - On-going improvements and clarifications to natto-py documentation.

- 2015/02/22 0.2.0 release.
    - Pulled.

- 2015/01/02: 0.1.0 release.
    - Issue 9: Refactored Python 23 support logic. 
    - On-going improvements and clarifications to natto-py documentation.

- 2014/12/31: 0.0.9 release.
    - MeCab: libpath attribute returns absolute path to MeCab library.
    - DictionaryInfo: filepath attribute returns absolute path to dictionary.
    - Improvements and clarifications to natto-py documentation.

- 2014/12/02: 0.0.8 release.
    - Issue 10: now returning a Generator instead of an array when parsing into
      nodes.
    - Cleaning up the README.rst and comments a bit.

- 2014/11/24: 0.0.7 release.
    - Issue 7: reversing decision in Issue #5: input/output in Python 2
      is a string in the encoding of the mecab lib; while in Python 3,
      both input/output will be in Unicode.
    - Minor refactoring to tighten up attribute visibility in MeCab and
      DictionaryInfo
    - Now testing on Ubuntu 14 (32-bit) as well.

- 2014/11/21: 0.0.6 release.
    - Issue #5: All input/output in Unicode; Python 2.7 users take heed.
    - Issue #7: MeCabEnv now uses Windows Registry to discover lib path.

- 2014/11/08: 0.0.5 release.
    - Issue #4: adding lib to natto.mecab.MeCab.
    - Issue #6: adding __del__ to natto.mecab.MeCab.

- 2014/11/08: 0.0.4 release.